syntax = "proto3";

package ypb;
option go_package = "/;ypb";
import "message_api.proto";


service ProjectApi {
  // 操作项目的相关接口，通过设置 ProjectDatabase
  rpc SetCurrentProject(SetCurrentProjectRequest) returns (Empty);
  rpc GetCurrentProject(Empty) returns (ProjectDescription);
  rpc GetProjects(GetProjectsRequest) returns (GetProjectsResponse);
  rpc NewProject(NewProjectRequest) returns (NewProjectResponse);
  rpc IsProjectNameValid(IsProjectNameValidRequest) returns (Empty);
  rpc RemoveProject(RemoveProjectRequest) returns (Empty);

  rpc DeleteProject(DeleteProjectRequest) returns (Empty);
  rpc GetDefaultProject(Empty) returns (ProjectDescription);
  rpc QueryProjectDetail(QueryProjectDetailRequest) returns (ProjectDescription);

  // 导入导出项目，带密码，带进度
  rpc ExportProject(ExportProjectRequest) returns (stream ProjectIOProgress);
  rpc ImportProject(ImportProjectRequest) returns (stream ProjectIOProgress);

  // 迁移旧数据库
  rpc MigrateLegacyDatabase(Empty) returns (Empty);
}
message ImportProjectRequest {
  string LocalProjectName = 1;
  string ProjectFilePath = 2;
  string Password = 3;
  int64 FolderId = 4;
  int64 ChildFolderId = 5;
}


message ExportProjectRequest {
  string ProjectName = 1;
  string Password = 2;
  int64 Id = 3;
}

message ProjectIOProgress {
  string TargetPath = 1;

  // 如果未完成，这个是百分比 0-1.0
  double Percent = 2;

  // 展示的提示语，可能是中断原因或者错误原因之类的
  string Verbose = 4;
}

message QueryProjectDetailRequest {
  int64 Id = 1;
}

message RemoveProjectRequest {
  string ProjectName = 1;
}


message IsProjectNameValidRequest {
  string ProjectName = 1;
  int64 FolderId = 2;
  int64 ChildFolderId = 3;
  string Type = 4;
}

message NewProjectResponse {
  int64 Id = 1;
  string ProjectName = 2;
}


message NewProjectRequest {
  string ProjectName = 1;
  string Description = 2;
  int64 FolderId = 3;
  int64 ChildFolderId = 4;
  string Type = 5;
  int64  Id = 6;
}

message ProjectDescription {
  string ProjectName = 1;
  string Description = 2;

  int64 Id = 3;
  string DatabasePath = 4;

  // 创建时间
  int64 CreatedAt = 5;

  int64 FolderId = 6;
  int64 ChildFolderId = 7;
  string Type = 8;
  int64 UpdateAt = 9;
  string FolderName = 10;
  string ChildFolderName = 11;
}


message GetProjectsRequest {
  string ProjectName = 1;
  string Description = 2;
  Paging Pagination = 3;
  int64 FolderId = 4;
  int64 ChildFolderId = 5;
  string Type = 6;
}

message DeleteProjectRequest {
  int64 Id = 1;
  bool IsDeleteLocal = 2;
}

message GetProjectsResponse {
  repeated ProjectDescription Projects = 1;
  Paging Pagination = 2;
  int64 Total = 3;
  int64 TotalPage = 4;
  int64 ProjectToTal = 9;
}

message SetCurrentProjectRequest {
  // ProjectName
  string ProjectName = 1;
  int64 Id = 2;
}